fix(UserProfileServiceImpl): modify the getOtherprofiles by implementing todo